fix: restore gap

--- a/packages/fiori/src/themes/ShellBarV2.css
+++ b/packages/fiori/src/themes/ShellBarV2.css
@@ -47,6 +47,7 @@
 	align-items: center;
 	width: 100%;
 	height: 100%;
+	gap: 0.5rem;
 }
 
 /* ============================================================================
